--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./img/IqUe8V.jpg');
+  background-repeat: no-repeat 
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-    color: rgba(156, 156, 156, 0.829);
 }
