created potions and add image

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('./img/IqUe8V.jpg');
-  background-repeat: no-repeat 
+  background-image: url('./img/lab.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 code {
