--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('./img/lab.jpg');
+  background-image: url('./img/lab2.jpg');
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  background-size: 100% 100vh;
 }
 
 code {
